feat: mail agent

--- a/.env.expamle
+++ b/.env.expamle
@@ -1,4 +1,11 @@
 OPENAI_API_KEY=...
+
+EMAIL_ADDRESS=your_email@163.com
+EMAIL_PASSWORD=your_password_or_app_code
+SMTP_HOST=smtp.163.com
+SMTP_SSL_PORT=465
+IMAP_HOST=imap.163.com
+
 # MODEL_NAME=gpt-4.1
 MODEL_NAME=gpt-4o-mini
 MODEL_TEMPERATURE=0
