--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ jsonschema-specifications==2025.9.1
 keyring==25.6.0
 langchain==1.0.3
 langchain-core==1.0.2
+langchain-mcp-adapters==0.1.12
 langchain-openai==1.0.1
 langgraph==1.0.2
 langgraph-checkpoint==3.0.0
