feat: 添加向量数据库服务

--- a/.env.expamle
+++ b/.env.expamle
@@ -1,16 +1,28 @@
-OPENAI_API_KEY=...
-
-EMAIL_ADDRESS=your_email@163.com
-EMAIL_PASSWORD=your_password_or_app_code
+# 配置163邮箱SMTP和IMAP服务
+EMAIL_ADDRESS= ...@163.com
+EMAIL_PASSWORD=your_password_or_app_code...
+# 默认使用163邮箱SMTP和IMAP服务,一般不需要修改
 SMTP_HOST=smtp.163.com
 SMTP_SSL_PORT=465
 IMAP_HOST=imap.163.com
 
-# MODEL_NAME=gpt-4.1
+
+# 配置使用的模型
 MODEL_NAME=gpt-4o-mini
+# 默认
 MODEL_TEMPERATURE=0
+# 默认系统提示,不需要修改
 SYSTEM_PROMPT=You are a helpful assistant.
+# 默认日志级别
 LOG_LEVEL=INFO
-# 自定义api
+
+# 自定义api, 当这里配置了, 会使用自定义的api, 而不是默认的OpenAI api
 CHATOPENAI_API_KEY=...
 CHATOPENAI_BASE_URL= https://www.dmxapi.cn/v1
+
+
+# 配置OpenAI API密钥,当自定义api配置了, 这里可以不配置; 或者上面的CHATOPENAI_API_KEY置空,使用 openai
+OPENAI_API_KEY=...
+
+# 配置HuggingFace 中文句向量嵌入模型
+HF_EMBEDDING_MODEL=BAAI/bge-small-zh-v1.5
