feat(auth): 添加JWT认证
- 新增JWT认证相关配置和环境变量
- 实现登录和注册功能及API文档
- 添加用户认证依赖和路由保护
- 更新用户API文档要求认证头
- 新增用户查询和认证服务功能

--- a/.env.expamle
+++ b/.env.expamle
@@ -44,3 +44,9 @@ DB_USER=
 # 将下面密码替换为你的本地 MySQL 密码；若无密码请创建或放通
 DB_PASSWORD=
 # 注意：仓库 SQL 使用的是 agentlz 数据库
+
+# 多租户与鉴权
+TENANT_ID_HEADER=X-Tenant-ID
+AUTH_JWT_SECRET=replace-me
+AUTH_JWT_ALG=HS256
+AUTH_JWT_ISSUER=agentlz
